--- a/vijay.html
+++ b/vijay.html
@@ -2,3 +2,5 @@
   <h1>vijay</h1>
 </center>
 <hr>
+<p>Career: Began his career as a child artist in 1984 before taking on lead roles in the early 1990s. He gained immense popularity in the mid-1990s and has since starred in numerous blockbuster films, including Ghilli (2004), Thuppakki (2012), Mersal (2017), and Leo (2023).
+"Thalapathy": His massive, global fanbase affectionately refers to him as "Thalapathy," a Tamil word meaning "commander".</p>
